Fixed horizontal on mobile!!

--- a/css/styles.css
+++ b/css/styles.css
@@ -62,20 +62,23 @@ main {
 
 .dash-top {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  align-items: center;
  background: gray;
- height: 50px;
+ height: 80px;
 }
 
 .headline {
-  margin: auto auto auto 15px;
+  margin: auto;
+  padding-top: 15px;
   color: white;
 
 }
 
 .searchbar {
-    margin: auto 15px auto auto;
-}
+    margin: auto;
+    margin-bottom: 15px;
+    }
 
 /* ALERT */
 
@@ -84,7 +87,7 @@ main {
     background-color: purple;
     border-radius: 2px;
     padding: 5px 2rem 0 20px;
-    margin: 15px;
+    margin: 5px;
     color: white;
     display: flex;
     align-items: center;
@@ -105,21 +108,21 @@ main {
       justify-content: space-between;
       align-items: center;
       padding-left: 10px;
-      margin-right: 50px;
+      padding-right: 50px;
 
 }
 
 .traffic-nav-link {
     padding-bottom: 10px;
-    margin-right: 15px;
+    padding-right: 15px;
 }
 
 .traffic-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-left: 10px;
-    margin-right: 50px;
+    padding-left: 10px;
+    padding-right: 50px;
 }
 
 .traffic-header h3 {
@@ -133,7 +136,7 @@ main {
 
 
 .traffic-nav  {
-    margin-right: 10px;
+    padding-right: 10px;
 }
 
 .traffic-nav-link:hover {
@@ -159,7 +162,7 @@ main {
 .chart-2 {
   height: 100%;
   width: 100%;
-  margin: 5px 0;
+  padding: 5px 0;
   border-top: 0.5px solid black;
 }
 
@@ -181,11 +184,12 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-	width: 100%;
+	width: 90%;
 	background: whitesmoke;
-  border: 2px solid grey;
+  border: 0.5px solid grey;
 	height: 200px;
-	margin: 5px 0px;
+	padding: 5px 0px;
+  margin-bottom: 10px;
 }
 
 .social-stats {
@@ -218,8 +222,7 @@ main {
 	background: white;
 	height: 300px;
 	width: 100%;
-	margin: 5px 0px;
-}
+	}
 
 .member-data {
   padding: auto;
@@ -247,8 +250,7 @@ main {
 }
 
 .recent-activity-info {
-  padding: auto;
-  margin-right: auto;
+    margin-right: auto;
 }
 
 }
@@ -273,7 +275,7 @@ main {
   background: white;
   height: 300px;
   width: 100%;
-  margin: 5px 0px;
+
 }
 
 
@@ -339,6 +341,9 @@ main {
     margin-bottom: 10px;
 }
 
+.settings {
+  border: solid 0.5px #dfdfdf;
+  }
 
 .settings h3 {
     font-size: 1em;
@@ -375,7 +380,7 @@ main {
     font-family: 'Roboto';
     font-size: .8em;
     text-transform: uppercase;
-    margin-right: 10px;
+    padding-right: 10px;
     width: 45%;
 }
 
@@ -423,6 +428,7 @@ main {
     position: relative;
     vertical-align: middle;
     transition: 0.25s;
+    margin-left: 10px;
   }
   .toggle-switch:before, .toggle-switch:after {
     content: "";
@@ -534,12 +540,16 @@ header img {
     height: 2.5rem;
     width: 2.5rem;
     border-radius: 50%;
-    margin-right: 25px;
+    margin-right: 5px;
     }
 
-  .new-member  .profile-image {
-    margin-left: 15px;
-  }
+    .main-profile-image {
+      height: 2.5rem;
+      width: 2.5rem;
+      border-radius: 50%;
+      margin-right: 25px;
+      }
+
 
 /* MEDIA QUERIES */
 
@@ -574,6 +584,27 @@ nav {
 nav svg {
   margin: 25px 0 0 0;
   }
+
+
+
+.dash-top {
+  flex-direction: row;
+  height: 50px;
+}
+
+.headline {
+  margin-left: 15px;
+  padding-top: 0;
+}
+
+.searchbar {
+    margin-right: 15px;
+  }
+
+  .searchbar input {
+    margin-bottom: 0px;
+  }
+
 
 .chart-1, .chart-2,
 .social-1, .social-2, .social-3,
